--- a/WindowsLockSecurity.Settings/MainWindow.xaml
+++ b/WindowsLockSecurity.Settings/MainWindow.xaml
@@ -1,67 +1,100 @@
-﻿<Window x:Class="WindowsLockSecurity.Settings.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WindowsLockSecurity.Settings"
-        mc:Ignorable="d"
-        WindowStartupLocation="CenterScreen" 
-        MinHeight="300" MinWidth="500"
-        Title="Home"
-        SizeToContent="WidthAndHeight">
+﻿<Window
+    x:Class="WindowsLockSecurity.Settings.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:WindowsLockSecurity.Settings"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Home"
+    MinWidth="500"
+    MinHeight="300"
+    SizeToContent="WidthAndHeight"
+    WindowStartupLocation="CenterScreen"
+    mc:Ignorable="d">
 
     <Window.Background>
         <LinearGradientBrush StartPoint="0 1" EndPoint="1 0">
-            <GradientStop Color="#FF333232" Offset="0"/>
-            <GradientStop Color="#FF203545" Offset="1"/>
+            <GradientStop Offset="0" Color="#FF333232" />
+            <GradientStop Offset="1" Color="#FF203545" />
         </LinearGradientBrush>
     </Window.Background>
 
     <Window.Resources>
         <Style TargetType="TextBlock">
-            <Setter Property="Foreground" Value="White"/>
-            <Setter Property="HorizontalAlignment" Value="Center"/>
-            <Setter Property="FontSize" Value="14"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="Foreground" Value="White" />
+            <Setter Property="HorizontalAlignment" Value="Center" />
+            <Setter Property="FontSize" Value="14" />
+            <Setter Property="VerticalAlignment" Value="Center" />
         </Style>
-        
+
     </Window.Resources>
-    
-    <Border BorderBrush="White" BorderThickness="2" Margin="10"
-            CornerRadius="10">
+
+    <Border
+        Margin="10"
+        BorderBrush="White"
+        BorderThickness="2"
+        CornerRadius="10">
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <TextBlock Text="AILC" Foreground="White" HorizontalAlignment="Center"
-                       Padding="5" FontWeight="Bold" FontStyle="Italic" FontSize="20"/>
-            
-            <Border Background="White" BorderBrush="White" Grid.Row="1" Height="2" Margin="2"
-                    CornerRadius="10"/>
+            <TextBlock
+                Padding="5"
+                HorizontalAlignment="Center"
+                FontSize="20"
+                FontStyle="Italic"
+                FontWeight="Bold"
+                Foreground="White"
+                Text="AILC" />
+
+            <Border
+                Grid.Row="1"
+                Height="2"
+                Margin="2"
+                Background="White"
+                BorderBrush="White"
+                CornerRadius="10" />
 
             <Grid Grid.Row="2" Margin="5">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="150"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="150" />
+                    <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Text="Shutdown Time:"/>
-                <TextBox Grid.Column="1" HorizontalAlignment="Left" MinWidth="200" Margin="10" />
+                <TextBlock Text="Shutdown Time:" />
+                <TextBox
+                    Grid.Column="1"
+                    MinWidth="200"
+                    Margin="10"
+                    HorizontalAlignment="Left" />
 
-                <TextBlock Text="Cancel kay:" Grid.Row="1"/>
-                <ComboBox Grid.Row="1" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10" MinWidth="200"/>
+                <TextBlock Grid.Row="1" Text="Cancel kay:" />
+                <ComboBox
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    MinWidth="200"
+                    Margin="10"
+                    Padding="10"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    ItemsSource="{Binding Keys}" />
 
-                <TextBlock Text="Start after boot:" Grid.Row="2"/>
-                <CheckBox Grid.Row="2" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10"/>
-                
+                <TextBlock Grid.Row="2" Text="Start after boot:" />
+                <CheckBox
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    Margin="10"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center" />
+
             </Grid>
         </Grid>
     </Border>
